feat: add optional WebGPU compute backend for heavy kernels
- Add @formula/gpu-kernels package with WebGPU compute shaders for SUM/SUMPRODUCT/MMULT/sort/histogram\n- Provide KernelEngine that selects CPU vs WebGPU based on workload + user toggle\n- Add diagnostics example UI, correctness tests (GPU tests auto-skip), and a small benchmark script

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:vitest": "vitest run",
     "test:node": "node scripts/run-node-tests.mjs",
     "test:e2e": "pnpm -C apps/desktop test:e2e",
-    "typecheck": "tsc -p tsconfig.json --noEmit"
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "bench:gpu-kernels": "node packages/gpu-kernels/bench/bench.mjs"
   },
   "engines": {
     "node": ">=18"
