feat: add Arrow-based Parquet import/export
- Add Arrow/Parquet helpers (parquet-wasm + apache-arrow) with batch-to-grid conversion
- Provide ArrowColumnarSheet backing store + range slicing for export
- Add desktop import/export wrapper and round-trip tests with fixture

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@formula/collab-comments": "workspace:*",
+    "@formula/data-io": "workspace:*",
     "@formula/text-layout": "workspace:*",
     "yjs": "^13.6.27"
   },
