feat: add bytecode+SIMD formula engine pipeline
- Add normalized AST parser and RPN bytecode compiler with DashMap cache
- Implement AVX2 (fallback scalar) SIMD kernels for SUM/AVERAGE/MIN/MAX/COUNT/COUNTIF and SUMPRODUCT
- Add parallel recalculation over topological levels (rayon) using cached bytecode
- Add criterion benchmarks + proptest equivalence tests and opt-in perf target assertions

--- a/crates/formula-engine/Cargo.toml
+++ b/crates/formula-engine/Cargo.toml
@@ -11,12 +11,25 @@ rstar = "0.12"
 inventory = "0.3"
 rayon = "1.10"
 serde = { version = "1.0", features = ["derive"] }
-thiserror = "2.0"
 formula-format = { path = "../formula-format" }
 serde_json = "1.0"
+thiserror = "2.0"
+
+# Bytecode cache + SIMD kernels for bulk range evaluation.
+ahash = "0.8"
+dashmap = "5"
+smallvec = "1"
+wide = "0.7"
 
 [dev-dependencies]
 pretty_assertions = "1.4"
+criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
+proptest = "1"
+rand = "0.8"
+
+[[bench]]
+name = "pipeline"
+harness = false
 
 [lib]
 path = "src/lib.rs"
