feat: wire VBA runtime into desktop macro runner

--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -30,6 +30,8 @@ base64 = "0.22"
 calamine = "0.26"
 formula-columnar = { path = "../../../crates/formula-columnar" }
 formula-engine = { path = "../../../crates/formula-engine" }
+formula-vba = { path = "../../../crates/formula-vba" }
+formula-vba-runtime = { path = "../../../crates/formula-vba-runtime" }
 formula-xlsx = { path = "../../../crates/formula-xlsx" }
 rust_xlsxwriter = "0.79"
 serde = { version = "1.0", features = ["derive"] }
