feat(ai-tools): audited tool-calling runner
- Add runChatWithToolsAudited to bridge packages/llm tool-calling loop with ai-audit logging
- Record token usage, approvals, tool results, and final accept/reject outcome via AIAuditRecorder
- Add unit test and wire ai-tools to depend on @formula/ai-audit

--- a/packages/ai-tools/package.json
+++ b/packages/ai-tools/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "./src/index.ts",
   "dependencies": {
+    "@formula/ai-audit": "workspace:*",
     "zod": "^3.24.2"
   }
 }
-
