feat: integrate cached text layout + wrapping into grid renderer

--- a/packages/grid/package.json
+++ b/packages/grid/package.json
@@ -12,6 +12,7 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@formula/text-layout": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
