--- a/packages/text-layout/package.json
+++ b/packages/text-layout/package.json
@@ -3,8 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "main": "./src/index.js",
+  "types": "./index.d.ts",
   "sideEffects": false,
   "exports": {
-    ".": "./src/index.js"
+    ".": {
+      "types": "./index.d.ts",
+      "default": "./src/index.js"
+    }
   }
 }
