--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -30,6 +30,7 @@ base64 = "0.22"
 calamine = "0.26"
 formula-columnar = { path = "../../../crates/formula-columnar" }
 formula-engine = { path = "../../../crates/formula-engine" }
+formula-model = { path = "../../../crates/formula-model" }
 formula-vba = { path = "../../../crates/formula-vba" }
 formula-vba-runtime = { path = "../../../crates/formula-vba-runtime" }
 formula-xlsb = { path = "../../../crates/formula-xlsb" }
