--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -26,6 +26,7 @@ desktop = [
 
 [dependencies]
 anyhow = "1.0"
+aes-gcm = "0.10"
 base64 = "0.22"
 calamine = "0.26"
 formula-columnar = { path = "../../../crates/formula-columnar" }
@@ -38,6 +39,8 @@ formula-xlsx = { path = "../../../crates/formula-xlsx" }
 rust_xlsxwriter = "0.79"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+keyring = "3.6"
+rand_core = "0.6"
 tauri = { version = "2.9", optional = true, features = ["tray-icon"] }
 tauri-plugin-global-shortcut = { version = "2.3", optional = true }
 tauri-plugin-updater = { version = "2.9", optional = true }
