feat(python-runtime): add browser-safe entrypoints via conditional exports
- Add conditional exports for browser vs node root entrypoints

- Add explicit subpath exports (pyodide/native/test-utils/document-controller)

- Update runtime tests to use new subpaths and add esbuild bundling smoke test

--- a/packages/python-runtime/package.json
+++ b/packages/python-runtime/package.json
@@ -3,6 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "main": "./src/index.js"
+  "exports": {
+    ".": {
+      "browser": "./src/index-browser.js",
+      "node": "./src/index-node.js",
+      "default": "./src/index-node.js"
+    },
+    "./pyodide": "./src/pyodide.js",
+    "./native": "./src/native.js",
+    "./test-utils": "./src/test-utils.js",
+    "./document-controller": "./src/document-controller.js"
+  },
+  "devDependencies": {
+    "esbuild": "^0.27.2"
+  }
 }
-
