feat: ship runnable sample-hello extension
- Implement sample-hello runtime (commands, panel, custom function, view activation)

- Add src + build script and node:test check to keep dist/extension.js in sync

- Unignore extensions/**/dist so packaged extensions include built entrypoints

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,11 @@ dist/
 build/
 **/build/
 
+# Extensions ship their built entrypoints so integration tests and marketplace
+# packaging can run without a separate build step.
+!extensions/**/dist/
+!extensions/**/dist/**
+
 .cache/
 **/.cache/
 
