--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -14,6 +14,7 @@
     "@formula/ai-completion": "workspace:*",
     "@formula/collab-comments": "workspace:*",
     "@formula/data-io": "workspace:*",
+    "@formula/scripting": "workspace:*",
     "@formula/text-layout": "workspace:*",
     "yjs": "^13.6.27"
   },
