--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node": ">=18"
   },
   "devDependencies": {
+    "@formula/scripting": "workspace:*",
     "@types/node": "^22.13.4",
     "fake-indexeddb": "^6.2.5",
     "jsdom": "^24.0.0",
