--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -16,10 +16,14 @@
     "@formula/data-io": "workspace:*",
     "@formula/scripting": "workspace:*",
     "@formula/text-layout": "workspace:*",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "yjs": "^13.6.27"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
     "@types/node": "^22.10.1",
     "typescript": "^5.7.3",
     "vite": "^6.0.7",
