feat: add browser Worker extension host and ESM extension API
- Add dual-entrypoint @formula/extension-api (CJS + ESM via exports)
- Implement BrowserExtensionHost + module Worker runtime with shared RPC protocol
- Add ESM build of sample-hello extension and Playwright e2e covering sumSelection
- Make Node ExtensionHost security import resilient without workspace node_modules

--- a/packages/extension-api/package.json
+++ b/packages/extension-api/package.json
@@ -3,6 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "main": "./index.js",
-  "types": "./index.d.ts"
+  "types": "./index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./index.d.ts",
+      "require": "./index.js",
+      "import": "./index.mjs"
+    }
+  }
 }
-
