--- a/extensions/sample-hello/package.json
+++ b/extensions/sample-hello/package.json
@@ -6,6 +6,7 @@
   "publisher": "formula",
   "license": "MIT",
   "main": "./dist/extension.js",
+  "module": "./dist/extension.mjs",
   "engines": {
     "formula": "^1.0.0"
   },
