feat: add Excel oracle compatibility gate
- Add python compat_gate script to run formula-excel-oracle + compare.py on a bounded tag set

- Pin a small Excel results dataset (versioned + pinned alias) for CI comparisons

- Enhance compare.py with --max-cases, per-tag pass/fail stats, and top missing functions/error kinds

- Implement NA() and harden formula-excel-oracle JSON encoding (TRUE/FALSE display, non-finite numbers)

- Wire the gate into CI and align excel-compat workflow with --max-cases

--- a/.github/workflows/excel-compat.yml
+++ b/.github/workflows/excel-compat.yml
@@ -185,6 +185,7 @@ jobs:
         if: ${{ env.MODE == 'validate-engine' }}
         shell: powershell
         run: |
+          $max = [int]"${{ env.MAX_CASES }}"
           $maxRate = $env:EFFECTIVE_MAX_MISMATCH_RATE
           $include = $env:EFFECTIVE_INCLUDE_TAGS
           $exclude = $env:EFFECTIVE_EXCLUDE_TAGS
@@ -197,6 +198,7 @@ jobs:
             "--report", "tests/compatibility/excel-oracle/reports/mismatch-report.json",
             "--max-mismatch-rate", $maxRate
           )
+          if ($max -gt 0) { $args += @("--max-cases", $max) }
 
           foreach ($t in ($include -split ",")) {
             $tag = $t.Trim()
