--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,18 @@ jobs:
       - name: Run formula-xlsx tests
         run: cargo test -p formula-xlsx
 
+  excel-oracle-compat:
+    name: Excel oracle compatibility (pinned)
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      - name: Run compatibility gate (engine vs pinned Excel dataset)
+        run: python tools/excel-oracle/compat_gate.py
+
   web:
     name: Web build
     runs-on: ubuntu-latest
