feat(formula-storage): versioned schema + rich cell value persistence
- Add schema_version table and transactional migrations (v1 baseline, v2 value_json)
- Store formula_model::CellValue (RichText/Array/Spill/ErrorValue) via value_json with scalar fast-path fallback
- Map legacy string errors to typed ErrorValue on load
- Expand integration tests to cover rich values and automatic migration from legacy schema

--- a/crates/formula-storage/Cargo.toml
+++ b/crates/formula-storage/Cargo.toml
@@ -11,7 +11,8 @@ thiserror = "1"
 uuid = { version = "1", features = ["v4", "serde"] }
 tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
 lru = "0.12"
+formula-model = { path = "../formula-model" }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["macros", "rt", "time"] }
-
+tempfile = "3"
