refactor(engine): centralize EngineWorker RPC in @formula/engine
- Remove duplicated desktop EngineWorker/protocol and keep RPC tests in packages/engine
- Extend engine.worker.ts to support both init/ping (web preview) and MessageChannel RPC (WASM)
- Add @formula/engine dependency to desktop and update ADR/typecheck wiring
- Stabilize vitest under Node 22 (localStorage polyfill + fix brittle regex)

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -16,6 +16,7 @@
     "@formula/ai-completion": "workspace:*",
     "@formula/collab-comments": "workspace:*",
     "@formula/data-io": "workspace:*",
+    "@formula/engine": "workspace:*",
     "@formula/scripting": "workspace:*",
     "@formula/text-layout": "workspace:*",
     "react": "^18.2.0",
