--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "packages/ai-tools/**/*.ts",
     "packages/ai-audit/**/*.ts",
     "packages/ai-audit/**/*.d.ts",
-    "apps/desktop/src/engine/worker/**/*.ts",
+    "packages/engine/**/*.ts",
     "vitest.config.ts"
   ]
 }
