feat: source function completions from Rust function registry
- Add formula-engine function_catalog bin that dumps FunctionSpec inventory as JSON\n- Add generator script and committed shared/functionCatalog.json\n- Load catalog in ai-completion FunctionRegistry (binary-search prefix match) while keeping curated arg hints\n- Use catalog for formula bar fallback signatures and add tests for catalog + fallback

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev:desktop": "pnpm -C apps/desktop dev",
     "dev:sync": "pnpm -C services/sync-server dev",
     "build:desktop": "pnpm -C apps/desktop build",
+    "generate:function-catalog": "node scripts/generate-function-catalog.js",
     "test": "pnpm test:vitest && pnpm test:node && pnpm test:sync && pnpm -C apps/desktop test",
     "test:sync": "pnpm -C services/sync-server test",
     "test:vitest": "vitest run",
