--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "predev": "pnpm -w build:wasm",
     "dev": "vite",
+    "prebuild": "pnpm -w build:wasm",
     "build": "vite build",
     "preview": "vite preview"
   },
