feat(sample-hello): emit ESM browser entrypoint
- Extend build.js to generate dist/extension.mjs alongside CJS dist/extension.js

- Add package.json browser field for BrowserExtensionHost

- Update docs/README to mention the dual-entrypoint build

--- a/extensions/sample-hello/package.json
+++ b/extensions/sample-hello/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "main": "./dist/extension.js",
   "module": "./dist/extension.mjs",
+  "browser": "./dist/extension.mjs",
   "engines": {
     "formula": "^1.0.0"
   },
