feat(dax): add columnar backend, grouping, and pivot API
- Introduce TableBackend abstraction with in-memory + formula-columnar backends
- Refactor filter propagation to use relationship indexes and columnar stats/dictionaries
- Add VALUES/ALL/SUMMARIZE table functions plus AND/OR
- Add pivot() API for grouped results and expand tests + Criterion benchmark

--- a/crates/formula-dax/Cargo.toml
+++ b/crates/formula-dax/Cargo.toml
@@ -6,6 +6,12 @@ edition = "2021"
 [dependencies]
 ordered-float = "4.2.0"
 thiserror = "2"
+formula-columnar = { path = "../formula-columnar" }
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
+criterion = "0.5"
+
+[[bench]]
+name = "columnar_vs_vec"
+harness = false
