feat: add shared spreadsheet frontend engine↔grid adapter
- Add @formula/spreadsheet-frontend with A1 helpers, EngineCellCache, and EngineGridProvider\n- Coalesce range invalidations to reduce CanvasGrid render churn\n- Extend @formula/engine client/worker with basic getRange/setRange API used by cache\n- Migrate web preview to shared provider (with header row/col)

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@formula/engine": "workspace:*",
     "@formula/grid": "workspace:*",
+    "@formula/spreadsheet-frontend": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
