fix(ai-audit): make browser entrypoint safe for web builds
- Split Node-only file storage and sql.js locating into *.node.ts + index.node entrypoint
- Keep default index/storage/sqlite-store free of node:* imports
- Add conditional package exports and update ai-tools to use package entry
- Add tests for browser-safe import and LocalStorage-backed sqlite persistence

--- a/packages/ai-audit/package.json
+++ b/packages/ai-audit/package.json
@@ -3,9 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "main": "./src/index.ts",
+  "exports": {
+    ".": {
+      "browser": "./src/index.ts",
+      "node": "./src/index.node.ts",
+      "default": "./src/index.ts"
+    },
+    "./browser": "./src/index.ts",
+    "./node": "./src/index.node.ts"
+  },
   "dependencies": {
     "sql.js": "^1.13.0"
   }
 }
-
