--- a/crates/formula-xls/Cargo.toml
+++ b/crates/formula-xls/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 calamine = "0.32"
+cfb = "0.10"
 formula-model = { path = "../formula-model" }
 thiserror = "2.0"
