--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -29,6 +29,7 @@ anyhow = "1.0"
 aes-gcm = "0.10"
 base64 = "0.22"
 calamine = "0.26"
+directories = "5.0"
 formula-columnar = { path = "../../../crates/formula-columnar" }
 formula-engine = { path = "../../../crates/formula-engine" }
 formula-model = { path = "../../../crates/formula-model" }
@@ -41,6 +42,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 keyring = "3.6"
 rand_core = "0.6"
+sha2 = "0.10"
+hex = "0.4"
 tauri = { version = "2.9", optional = true, features = ["tray-icon"] }
 tauri-plugin-global-shortcut = { version = "2.3", optional = true }
 tauri-plugin-updater = { version = "2.9", optional = true }
