feat: harden WASM asset delivery for worker runtime
- Add `pnpm build:wasm` pipeline to wasm-pack build + copy wrapper/wasm into web+desktop public/engine\n- Switch @formula/engine worker to RPC-based wasm workbook backed by dynamic import of /engine/formula_wasm.js\n- Add stable default wasm module URL helper (absolute /engine path)\n- Wire app builds to ensure wasm assets exist; relax Tauri CSP for WebAssembly\n- Add Playwright smoke tests for web preview + desktop startup wasm load

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:sync": "pnpm -C services/sync-server test",
     "test:vitest": "vitest run",
     "test:node": "node scripts/run-node-tests.mjs",
-    "test:e2e": "pnpm -C apps/desktop test:e2e",
+    "test:e2e": "pnpm -C apps/web test:e2e && pnpm -C apps/desktop test:e2e",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "bench:gpu-kernels": "node packages/gpu-kernels/bench/bench.mjs",
     "benchmark": "node --experimental-strip-types apps/desktop/tests/performance/run.ts",
