feat(marketplace): SQLite persistence, moderation, rate limits, and cursor search
- Replace JSON store with SQLite (sql.js) + migrations and legacy import\n- Store package bytes in DB with transactional publish + download count updates\n- Add per-token/per-IP rate limiting, package/manifest validation, and moderation (deprecated/blocked/malicious + version yanks) with audit log\n- Expand /api/search with filters, sorting, and stable cursor pagination\n- Add /metrics endpoint + structured request logging\n- Extend integration tests for concurrency, moderation, rate limiting, and download integrity

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ node_modules/
 **/.pnpm-store/
 dist/
 **/dist/
+!extensions/sample-hello/dist/
+!extensions/sample-hello/dist/**
 
 build/
 **/build/
