--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "bench:gpu-kernels": "node packages/gpu-kernels/bench/bench.mjs",
     "benchmark": "node --experimental-strip-types apps/desktop/tests/performance/run.ts",
-    "test:perf": "pnpm benchmark"
+    "test:perf": "pnpm benchmark",
+    "extension:pack": "node scripts/extension.mjs pack",
+    "extension:verify": "node scripts/extension.mjs verify",
+    "extension:inspect": "node scripts/extension.mjs inspect"
   },
   "engines": {
     "node": ">=18"
