--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -50,6 +50,7 @@ tauri-plugin-updater = { version = "2.9", optional = true }
 thiserror = "1.0"
 
 [dev-dependencies]
+cfb = "0.10"
 tempfile = "3.10"
 
 [build-dependencies]
