fix(ai-audit): avoid bundling sql.js from default browser entry
- Stop re-exporting SqliteAIAuditStore from src/index.ts so web bundlers importing only LocalStorageAIAuditStore/recorder don't traverse sql.js (which contains Node-only requires)
- Add @formula/ai-audit/sqlite subpath with node/browser variants
- Keep node entrypoint exporting sqlite store + helpers; update LocalStorage sqlite test imports

--- a/packages/ai-audit/package.json
+++ b/packages/ai-audit/package.json
@@ -10,7 +10,12 @@
       "default": "./src/index.ts"
     },
     "./browser": "./src/index.ts",
-    "./node": "./src/index.node.ts"
+    "./node": "./src/index.node.ts",
+    "./sqlite": {
+      "browser": "./src/sqlite.ts",
+      "node": "./src/sqlite.node.ts",
+      "default": "./src/sqlite.ts"
+    }
   },
   "dependencies": {
     "sql.js": "^1.13.0"
