--- a/packages/text-layout/package.json
+++ b/packages/text-layout/package.json
@@ -11,5 +11,13 @@
       "types": "./index.d.ts",
       "default": "./src/index.js"
     }
+  },
+  "scripts": {
+    "test": "node --test test/*.test.js"
+  },
+  "dependencies": {
+    "grapheme-splitter": "^1.0.4",
+    "harfbuzzjs": "^0.4.15",
+    "opentype.js": "^1.3.4"
   }
 }
