--- a/packages/gpu-kernels/package.json
+++ b/packages/gpu-kernels/package.json
@@ -6,5 +6,9 @@
   "main": "./src/index.js",
   "exports": {
     ".": "./src/index.js"
+  },
+  "scripts": {
+    "test": "node --test test/*.test.js",
+    "bench": "node bench/bench.mjs"
   }
-}
+} 
