feat(desktop): enable Pyodide SharedArrayBuffer bridge
- Add COOP/COEP headers in Vite dev/preview so crossOriginIsolated is true
- Self-host Pyodide v0.25.1 assets under /pyodide via a deterministic downloader
- Fix Pyodide worker RPC to handle PyProxy params + SharedArrayBuffer TextDecoder
- Add python-runtime test page + Playwright e2e verification and docs

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -4,10 +4,11 @@
   "type": "module",
   "scripts": {
     "predev": "pnpm -w build:wasm",
-    "dev": "vite --port 4174 --strictPort",
     "prebuild": "pnpm -w build:wasm",
-    "build": "vite build",
+    "dev": "node scripts/ensure-pyodide-assets.mjs && vite --port 4174 --strictPort",
+    "build": "node scripts/ensure-pyodide-assets.mjs && vite build",
     "preview": "vite preview --port 4174 --strictPort",
+    "pyodide:setup": "node scripts/ensure-pyodide-assets.mjs",
     "test:node": "node --test",
     "test": "vitest run",
     "test:e2e": "playwright test"
@@ -17,6 +18,7 @@
     "@formula/collab-comments": "workspace:*",
     "@formula/data-io": "workspace:*",
     "@formula/engine": "workspace:*",
+    "@formula/python-runtime": "workspace:*",
     "@formula/scripting": "workspace:*",
     "@formula/text-layout": "workspace:*",
     "react": "^18.2.0",
