--- a/crates/formula-model/Cargo.toml
+++ b/crates/formula-model/Cargo.toml
@@ -7,6 +7,7 @@ description = "Core in-memory data model for Formula spreadsheets (workbooks/she
 
 [dependencies]
 formula-columnar = { path = "../formula-columnar" }
+csv = "1.3"
 regex = "1.10"
 serde = { version = "1.0", features = ["derive"] }
 formula-format = { path = "../formula-format" }
