feat(formula-xlsb): add xlsb_dump CLI for worksheet/formula diagnostics
- Add xlsb_dump binary to print sheet list and stream cells with A1 addresses
- Expose rgce decoder with structured errors (ptg + offset) and hex formatting helpers
- Add assert_cmd integration test over simple.xlsb fixture

--- a/crates/formula-xlsb/Cargo.toml
+++ b/crates/formula-xlsb/Cargo.toml
@@ -9,5 +9,6 @@ thiserror = "1.0"
 zip = { version = "0.6", default-features = false, features = ["deflate"] }
 
 [dev-dependencies]
+assert_cmd = "2.0"
 pretty_assertions = "1.4"
 tempfile = "3.10"
